ci: Running build and test on Actions. Replaces semantic-release
semantic-release has a philosophy where all packages must start at
`v1.0.0` even when the API is not stable. This library is not mature
enough to declare anything other than v0.*. We'll have to resolve to
publishing on git tags for now

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,13 +1,16 @@
+require: rubocop-rake
 AllCops:
   NewCops: enable
 Style/StringLiterals:
   Exclude:
-    - 'test/proto/addressbook_pb.rb'
+    - '**/*_pb.rb'
 Style/HashSyntax:
   Exclude:
-    - 'test/proto/addressbook_pb.rb'
+    - '**/*_pb.rb'
 Style/FrozenStringLiteralComment:
   Exclude:
-    - 'test/proto/addressbook_pb.rb'
+    - '**/*_pb.rb'
 Metrics/MethodLength:
   Max: 100
+  Exclude:
+    - '**/*_pb.rb'
