ci: Removed extraneous RubyGems publish in the Github step

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -42,7 +42,7 @@ jobs:
     needs:
       - lint
       - test
-    name: Build + Publish
+    name: Build + Publish to GPR
     runs-on: ubuntu-latest
     permissions:
       packages: write
@@ -67,22 +67,11 @@ jobs:
           GEM_HOST_API_KEY: "Bearer ${{secrets.GITHUB_TOKEN}}"
           OWNER: ${{ github.repository_owner }}
 
-      - name: Publish to RubyGems
-        run: |
-          mkdir -p $HOME/.gem
-          touch $HOME/.gem/credentials
-          chmod 0600 $HOME/.gem/credentials
-          printf -- "---\n:rubygems_api_key: ${GEM_HOST_API_KEY}\n" > $HOME/.gem/credentials
-          gem build *.gemspec
-          gem push *.gem
-        env:
-          GEM_HOST_API_KEY: "${{secrets.RUBYGEMS_AUTH_TOKEN}}"
-
   publish-to-ruby-gems:
     needs:
       - lint
       - test
-    name: Build + Publish
+    name: Build + Publish to RubyGems
     runs-on: ubuntu-latest
     permissions:
       packages: write
