--- a/spec/fluent.conf
+++ b/spec/fluent.conf
@@ -1,25 +1,25 @@
-# <source>
-#     @type tcp
-#     tag tcp.events
-#     port 0
-#     delimiter "\n"
-#     <parse>
-#         @type json
-#     </parse>
-# </source>
-#
-# <match tcp.events>
-#     @type file
-#
-#     path /opt/fluent-plugin-formatter-protobuf/out
-#
-#     <buffer>
-#         @type memory
-#     </buffer>
-#
-#     <format>
-#         @type protobuf
-#         message_name "Log"
-#         include_paths "#{File.expand_path(File.join(__dir__, 'log_pb.rb'))}"
-#     </format>
-# </match>
+<source>
+    @type http
+    bind 0.0.0.0
+    port 5170
+    <parse>
+        @type json
+    </parse>
+</source>
+
+<match tcp.events>
+     @type kafka2
+     brokers 'broker:9092'
+     default_topic 'integration-tests'
+
+    <buffer>
+        @type memory
+        flush_interval 1s
+    </buffer>
+
+    <format>
+        @type protobuf
+        message_name "Log"
+        include_paths ["/opt/fluent-plugin-formatter-protobuf/spec/log_pb.rb"]
+    </format>
+</match>
