feat: Added new config_param: `decode_json`

--- a/test/integration/fluent.conf
+++ b/test/integration/fluent.conf
@@ -19,7 +19,7 @@
 
     <format>
         @type protobuf
-        message_name "Log"
+        class_name "Log"
         include_paths ["/opt/fluent-plugin-formatter-protobuf/log_pb.rb"]
     </format>
 </match>
