--- a/release-please-config.json
+++ b/release-please-config.json
@@ -4,8 +4,8 @@
       "releaseType": "ruby",
       "draft": false,
       "prerelease": false,
-      "bumpMinorPreMajor": false,
-      "bumpPatchForMinorPreMajor": false,
+      "bumpMinorPreMajor": true,
+      "bumpPatchForMinorPreMajor": true,
       "changelogPath": "CHANGELOG.md",
       "versioning": "default"
     }
