--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -8,11 +8,12 @@ jobs:
     environment: main
     runs-on: ubuntu-latest
     steps:
-      - uses: google-github-actions/release-please-action@v3
+      - uses: google-github-actions/release-please-action@v2
         id: release
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           release-type: ruby
+          version-file: "lib/fluent/plugin/version.rb"
 
       - uses: actions/checkout@v2
 
