--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -17,10 +17,11 @@ jobs:
 
       - uses: actions/checkout@v2
 
-      - name: Set up Ruby 2.5
+      - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
           bundler-cache: true
+          ruby-version: '2.5'
 
       - name: Publish to GPR
         run: |
